Viewport apply scroll should be on the document element not scrollingElement.

In r387224 I moved all the viewport scrolling actions be happen from a special
apply scroll method installed on the scrollingElement. This turned out to be
my misunderstanding of how scrollingElement and viewport scrolling in regards
to the DOM tree worked. This caused a bug whenever a page explicitly made the
<body> element scrollable as the callback would try to scroll the viewport
rather than the <body>.

The solution is to install the apply scroll on the document element (<html>).
This means that the <body> element will still be considered for scrolling while
the scroll bubbles up the DOM. An <html> element never has any overflow of its
own, even if it's explicitly marked as overflow: scroll. In most cases, the
<body> won't have an overflow clip of its own and so the scroll will defer to
the viewport. This is in line with how scrolling worked prior to my change in
r387224.

Since we no longer query scrollingElement from layout, the failing test
expectation (track-word-breaking.html) is no longer tripped by this so I removed
the expectation.

BUG=604296

Review URL: https://codereview.chromium.org/1895323002

Cr-Commit-Position: refs/heads/master@{#388320}

Former-commit-id: c6821f17fffc100363aab8ce04c22d6a59b57e33